--- a/Survey-Form/survey.css
+++ b/Survey-Form/survey.css
@@ -1,5 +1,26 @@
 body {
     text-align: center;
-    margin: 100px, 0, 0, 0;
+    margin: auto;
     background: lightgrey;
+   
+}
+
+
+input {
+    border-radius: 30px;
+    text-align: center;
+    background-color: antiquewhite;
+
+}
+
+textarea {
+    border-radius: 30px;
+    text-align: center;
+    background-color: antiquewhite;
+}
+
+select {
+    border-radius: 30px;
+    text-align: center;
+    background-color: antiquewhite;
 }
