fixed submit button

--- a/Survey-Form/survey.css
+++ b/Survey-Form/survey.css
@@ -25,3 +25,8 @@ select {
     text-align: center;
     background-color: antiquewhite;
 }
+
+input[type="submit"]{
+    background-color: black;
+    color: white;
+}
